AurelienLaval-appeler-une-methode-de-controleur-depuis-Salesforce/objects/Voiture__c.object
<CustomObject>
    <fields>
        <fullName>Couleur__c</fullName>
        <label>Couleur</label>
        <picklist>
            <picklistValues>
                <fullName>Jaune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prix__c</fullName>
        <label>Prix</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Référence</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Voiture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Voiture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voitures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>